--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 .gradle
-build/
+build/classes
+build/generated
+build/reports
+build/tmp
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -65,3 +68,6 @@ ehthumbs.db
 *.jar
 *.war
 *.ear
+
+# =====idea======
+*/idea
